--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ footer a:hover { color: var(--accent); }
 <div id="initialButtons">
   <button id="googleLoginBtn" class="login-btn google-btn">
     <i class="fab fa-google btn-icon"></i>
-    <span>Continue with Google</span>
+    <span>proceed with Google</span>
     <div class="spinner" id="googleSpinner"></div>
   </button>
 
