--- a/index.html
+++ b/index.html
@@ -351,15 +351,15 @@ footer a:hover { color: var(--accent); }
 <div class="login-container">
   <div class="login-card">
 
-<h1>Welcome to Patholytica</h1>
-<p>Your tool to <strong>LOVE</strong> what you learn</p>
+<h1>Merhaba!</h1>
+<p>The conservative of <strong>understanding</strong> </p>
 
 <!-- Initial buttons -->
 
 <div id="initialButtons">
   <button id="googleLoginBtn" class="login-btn google-btn">
     <i class="fab fa-google btn-icon"></i>
-    <span>Log with Google</span>
+    <span>Login with Google</span>
     <div class="spinner" id="googleSpinner"></div>
   </button>
 
