--- a/panel.html
+++ b/panel.html
@@ -189,7 +189,7 @@ body {
   flex: 1;
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   max-width: 100%;
   display: none;
 }
@@ -203,6 +203,7 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 16px;
   max-width: 100%;
+  padding-bottom: 80px;
 }
 
 .material-card {
@@ -763,7 +764,7 @@ body.light-theme ::-webkit-scrollbar-thumb:hover {
   }
   
   .materials-container {
-    padding: 12px;
+    padding: 12px 12px 0 12px;
   }
   
   .message {
