--- a/panel.html
+++ b/panel.html
@@ -203,7 +203,7 @@ body {
   grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
   gap: 16px;
   max-width: 100%;
-  padding-bottom: 80px;
+  padding-bottom: 120px;
 }
 
 .material-card {
@@ -354,6 +354,7 @@ body {
   flex: 1;
   overflow-y: auto;
   padding: 20px;
+  padding-bottom: 120px;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -426,7 +427,7 @@ body.light-theme .message.sent .message-bubble {
 }
 
 .chat-input-area {
-  padding: 16px 20px; /* Remove calc with safe-area-inset-bottom */
+  padding: 16px 20px;
   background: var(--card-bg);
   backdrop-filter: blur(22px);
   border-top: 1px solid var(--card-border);
@@ -476,10 +477,9 @@ body.light-theme .message.sent .message-bubble {
 }
 
 /* Floating Action Button */
-/* Floating Action Button */
 .fab {
   position: fixed;
-  bottom: 20px; /* Remove the calc with safe-area-inset-bottom */
+  bottom: 20px;
   right: 20px;
   width: 56px;
   height: 56px;
@@ -495,7 +495,6 @@ body.light-theme .message.sent .message-bubble {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* Removed margin-bottom: env(safe-area-inset-bottom); */
 }
 
 .fab:hover {
@@ -751,13 +750,9 @@ body.light-theme ::-webkit-scrollbar-thumb:hover {
 
 /* Responsive */
 @media (max-width: 768px) {
-.materials-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 16px;
-  max-width: 100%;
-  padding-bottom: 120px; /* Increased from 100px to account for Safari bar */
-}
+  .materials-grid {
+    grid-template-columns: 1fr;
+  }
   
   .content-actions .action-btn:not(.primary) {
     display: none;
