--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@ body.light-theme .logo-img {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: var(--accent);
+  background: transparent;
   border: none;
-  color: white;
+  color: var(--text-primary);
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -135,7 +135,7 @@ body.light-theme .logo-img {
 }
 
 .login-icon-btn:hover {
-  background: var(--accent-hover);
+  background: var(--hover-bg);
   transform: scale(1.05);
 }
 
@@ -696,7 +696,7 @@ onAuthStateChanged(auth, (user) => {
 
 // Go to login page
 window.goToLogin = function() {
-  window.location.href = "index.html";
+  window.location.href = "login.html";
 };
 
 // Logout handler
@@ -704,8 +704,9 @@ window.handleLogout = function() {
   signOut(auth)
     .then(() => {
       showNotification("Signed out successfully", "success");
+      // Just reload the page to show login button
       setTimeout(() => {
-        window.location.href = "index.html";
+        window.location.reload();
       }, 1000);
     })
     .catch((error) => {
